# nitrabot_ws

./: .gitignore  Doxyfile  README.md  record_bag.sh
Lumi-Robotics/carto_configs/: README.md
Lumi-Robotics/carto_configs/configuration_files/: lumi_carto_slam_all.lua  lumi_carto_slam_no_odom.lua  lumi_carto_slam_only_lidar.lua
Lumi-Robotics/carto_configs/launch/: lumi_carto_pure_localization.launch  lumi_carto_show_map.launch  lumi_carto_slam_all.launch  lumi_carto_slam_no_imu.launch  lumi_carto_slam_no_odom.launch  lumi_carto_slam_only_lidar.launch
Lumi-Robotics/carto_configs/maps/: map.pbstream  mymap.pgm  mymap.yaml
Lumi-Robotics/carto_configs/rviz/: map.rviz
Lumi-Robotics/carto_configs/scripts/: show_map.sh  start_nodes_demo.sh  start_slam_all.sh  start_slam_no_imu.sh  start_slam_no_odom.sh  start_slam_only_lidar.sh  write_map.sh
Lumi-Robotics/src/: README.md
Lumi-Robotics/src/lumi_robot/: CMakeLists.txt  package.xml
Lumi-Robotics/src/map_server_modified/: CMakeLists.txt  package.xml
Lumi-Robotics/src/riki_msgs/: CMakeLists.txt
Lumi-Robotics/src/simple_pose/: CMakeLists.txt  package.xml  poseData_out.csv
Lumi-Robotics/src/xrrobot/: CMakeLists.txt  package.xml
backup/nitrabot_launch/launch/: .navigation.launch.swp  gmapping.launch
backup/nitrabot_launch/param/: costmap_common_params.yaml  move_base_params.yaml
cartographer_ws/build_isolated/: catkin_make_isolated.cache
cartographer_ws/build_isolated/cartographer_ros/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_ros_msgs/: .ninja_log  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/build_isolated/cartographer_rviz/: .ninja_deps  .ninja_log  AllFiles.cmake  CMakeCache.txt  CTestConfiguration.ini  CTestTestfile.cmake  build.ninja  cmake_install.cmake  install_manifest.txt  rules.ninja
cartographer_ws/devel_isolated/: env.sh  setup.bash  setup.sh  setup.zsh
cartographer_ws/devel_isolated/cartographer_ros/: .catkin  local_setup.sh  setup.sh
cartographer_ws/devel_isolated/cartographer_ros_msgs/: .catkin  local_setup.sh
cartographer_ws/devel_isolated/cartographer_rviz/: .catkin  .rosinstall  _setup_util.py
cartographer_ws/install_isolated/: .rosinstall
cartographer_ws/src/: .rosinstall  .rosinstall.bak
doc/00_documentation/html/: graph_legend.html  index.html
doc/00_documentation/latex/: refman.tex
nitra_ws/: start_3d_lidar.sh  start_creating_map.sh  start_navigation.sh  start_pure_localization.sh  start_robot.sh  start_slam.sh
nitra_ws/src/cartographer_config/: CMakeLists.txt  package.xml
nitra_ws/src/logger/: CMakeLists.txt  package.xml
nitra_ws/src/nitra_robot/: package.xml
src/f9p_ichimill/launch/: gps_ichimill.launch
src/f9p_ichimill/scripts/: f9p_driver.py
src/feedforward_controller/: CMakeLists.txt  package.xml
src/feedforward_controller/src/: feedforward_controller.cpp
src/gps/gps_trans/: CMakeLists.txt  package.xml  setup.py
src/nitrabot_communication/: CMakeLists.txt  package.xml
src/nitrabot_communication/include/robot_communication/: robot_data.h
src/nitrabot_communication/launch/: nitrabot_communication.launch
src/nitrabot_communication/src/nitrabot_communication/: command_to_odom.cpp  encoder_to_odom.cpp  robot_communication.cpp  robot_data.cpp
src/nitrabot_control/: CMakeLists.txt  package.xml  setup.py
src/nitrabot_control/data/: data_exp01.csv  data_exp_smallDeltat.csv  data_experiment_LTurn_outdoor_interp01stopcond.csv  data_experiment_straight_outdoor.csv  data_outdoorrobot_exp.csv  data_outdoorrobot_exp_smallDeltat.csv
src/nitrabot_control/include/: pure_pursuit.h
src/nitrabot_control/launch/: nitrabot_control.launch
src/nitrabot_control/msg/: EncoderWheelVel.msg  RobotWheelVel.msg
src/nitrabot_control/scripts/: bumper_control_node
src/nitrabot_control/src/: controller_node.cpp  feedforward.cpp  pure_pursuit.cpp
src/nitrabot_control/src/robot_communication/: command_to_odom.cpp  encoder_to_odom.cpp
src/nitrabot_control/test/: test_bumper_control.py
src/nitrabot_description/: CMakeLists.txt  package.xml
src/nitrabot_description/config/: control.yaml  joint_states.yaml  wheel_velocity_controller.yaml
src/nitrabot_description/launch/: gazebo.launch  industrial_robot.launch  nitrabot_description.launch  wheel_velocity.launch
src/nitrabot_description/rviz/: urdf.rviz
src/nitrabot_description/urdf/: industrial_robot.urdf.xacro  industrial_robot.xacro  properties.xacro  sensors_and_actuators.xacro
src/nitrabot_dockerfiles/: Dockerfile  Dockerfile.melodic  docker-compose.yml
src/nitrabot_dockerfiles/install/: i_dep.sh  xauth.sh
src/nitrabot_launch/: CMakeLists.txt  package.xml
src/nitrabot_launch/include/: pure_pursuit.h
src/nitrabot_launch/launch/: bringup.launch  nav_move_base.launch  nav_pure_pursuit.launch  navigation.launch
src/nitrabot_launch/maps/: dummy_map.yml
src/nitrabot_launch/scripts/: path_finder_node.py  path_recorder_node.py
src/nitrabot_localization/: CMakeLists.txt  package.xml
src/nitrabot_localization/config/: ekf_global_params.yaml  ekf_local_params.yaml  ekf_localization.rviz  navsat_transform_params.yaml  tf_view.rviz
src/nitrabot_localization/launch/: ekf_localization.launch
src/nitrabot_movebase_config/: CMakeLists.txt  README.md  package.xml
src/nitrabot_movebase_config/launch/basic/: move_base.launch
src/nitrabot_movebase_config/param/basic/: costmap_common_params.yaml  dwa_local_planner_params.yaml  eband_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml  teb_local_planner_params.yaml
src/nitrabot_remote/: CMakeLists.txt  package.xml  setup.py
src/nitrabot_remote/scripts/: nitra_remote_node  nitrabot_remote_node
src/robot_sim_com/: CMakeLists.txt  package.xml
src/rt_usb_9axisimu_driver/: CMakeLists.txt  package.xml
(+594 files in other folders)
