<?xml version="1.0"?>
<package format="2">
  <name>feedforward_controller</name>
  <version>0.0.0</version>
  <description>feedforward_controller package</description>

  <maintainer email="bobdbl99@gmail.com">Loc Dang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
