<?xml version="1.0"?>
<package format="2">
  <name>nitrabot_communication</name>
  <version>0.0.0</version>
  <description>The nitrabot_control package</description>
  <maintainer email="chuoru@github.com">chuoru</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
