<?xml version="1.0"?>
<package format="2">
  <name>nitrabot_localization</name>
  <version>0.0.0</version>
  <description>The nitrabot_localization package</description>
  <maintainer email="bobdbl99@gmail.com">Loc Dang</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
