<?xml version="1.0"?>
<package format="2">
  <name>nitrabot_movebase_config</name>
  <version>0.0.0</version>
  <description>Launch and parameter files for move_baes</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
